# Multimodal

./: .gitignore  00_Multimodal.md  PROMPT.md  README.md  pyproject.toml
applications/: 00_Applications.md  01_Image_Generation.md  02_Video.md  03_Robotics.md  04_Omni_Serving.md
diffusion/: 00_Diffusion.md  01_Diffusion_Basics.md  02_Sampling.md  03_Latent_Diffusion.md  04_DiT.md  paper_reading_note.md
multimodal_generation/: 00_Multimodal_Generation.md  01_Generation_Patterns.md
scripts/: 01_clip_encoder.py  02_llava_pipeline.py  03_compare_encoders.py  04_projector_and_merge.py  05_dit_architecture.py  06_latent_diffusion_pipeline.py  07_flux_dit_blocks.py  08_denoising_loop.py  README.md  diffusion_architecture.html  llava_architecture.html  llava_block_diagram.html  semantic_encoders.html
vision_language/: 00_Vision_Language.md  01_Architecture.md  02_Models.md  03_Unified_Models.md  04_Training.md
visual_encoder/: 00_Visual_Encoder.md  01_CNN_Basics.md  02_ViT.md  03_Semantic_Encoders.md  04_VAE.md  05_Hands_On_Lab.md
