[project]
name = "multimodal-labs"
version = "0.1.0"
description = "Hands-on scripts for learning visual encoders and VLMs"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "pillow",
    "numpy",
    "httpx[socks]>=0.28.1",
    "accelerate>=1.13.0",
    "huggingface-hub>=1.6.0",
    "sentencepiece>=0.2.1",
    "protobuf>=7.34.0",
    "diffusers>=0.30.0",
]
